added new 'blog aggregate' page template, to list all blog posts

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -105,6 +105,10 @@ button {
 	line-height: 1em !important;
 }
 
+.no-margin {
+	margin: 0 !important;
+}
+
 /*------------------------------------*\
     STRUCTURE
 \*------------------------------------*/
