moved searchbar to footer

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -371,14 +371,13 @@ button[role=button] {
 
 #column-right {
 	white-space: pre-line;
-	padding-right: 20px;
 
 	font-weight: bold;
 }
 
 #footer-right {
 	height: 100%;
-	margin-top: 20px; /*correctly pads right footer widget*/
+	margin: 20px 20px 0 0; /*correctly pads right footer widget*/
 
 	display: flex;
 	flex-direction: column;
@@ -387,11 +386,15 @@ button[role=button] {
 	text-align: right;
 }
 
+.search {
+
+}
+
 .copyright {
 	text-align: right;
 
 	white-space: pre-line;
-	padding: 0 20px 20px 0;
+	padding: 0 0 20px 0;
 }
 
 /*------------------------------------*\
