updated dr. feldmans profile photo

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -499,9 +499,9 @@ button[role=button] {
 	text-align: center;
 }
 
-#post-19 > div:nth-child(2) > div:nth-child(2) > div:nth-child(3) {
+/*#post-19 > div:nth-child(2) > div:nth-child(2) > div:nth-child(3) {
 	display: none;
-}
+}*/
 
 /*******SPLIT-PAGE FORMATTING*******/
 
