--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -507,7 +507,9 @@ button[role=button] {
 
 .front#split-page-main {
 	position: relative;
-	/*bottom: 150px;*/
+	bottom: 150px;
+
+	margin-bottom: -150px;
 }
 
 /*******SPLIT-PAGE FORMATTING*******/
