--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -921,6 +921,8 @@ input[type="search"] {
 
 	height: 200px;
 	width: 200px;
+
+	object-fit: contain; /* for osme reason, remote site requires this here, too */
 }
 
 .loop-thumbnail > img {
