pushing modified style.css file

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -521,7 +521,7 @@ input[type="search"] {
 	margin-bottom: -150px;
 }
 
-/*******SPLIT-PAGE FORMATTING*******/
+/*******SPLIT PAGE FORMATTING*******/
 
 .front-page {
 	position: relative;
